# nano-banana-tests

./: .gitignore  GPT_1_IMAGE_DOCS.txt  README.md  README_GPT.md  character_json.ipynb  character_json_gpt.py  code_generation.ipynb  code_generation_gpt.py  ghibli_style_transfer.ipynb  ghibli_style_transfer_gpt.py  image_gen_helper.py  ip_bonanza.ipynb  ip_bonanza_gpt.py  paladin_pirate_barista.json  pyproject.toml  system_prompt.ipynb  system_prompt_gpt.py  test_api.py  ugly_sonic.ipynb  ugly_sonic_gpt.py
